--- a/iot/package.json
+++ b/iot/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.14.0",
     "jest-expo": "~27.0.0",
+    "react-native-scripts": "^1.14.1",
     "react-test-renderer": "16.3.1"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,8 +19,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^27.0.1",
+    "exp": "^55.0.4",
+    "expo": "^28.0.0",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-native-bcrypt": "^2.4.0",
+    "react-native-transition": "^1.1.8",
+    "react-navigation": "^2.5.2",
+    "react-navigation-fluid-transitions": "^0.2.1"
   }
 }
