--- a/iot/package.json
+++ b/iot/package.json
@@ -21,11 +21,16 @@
   "dependencies": {
     "exp": "^55.0.4",
     "expo": "^28.0.0",
+    "moment": "^2.22.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-animatable": "^1.3.0",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-calendar-picker": "^5.19.0",
     "react-native-indicators": "^0.13.0",
+    "react-native-modal": "^6.4.0",
     "react-native-svg-charts": "^5.2.0",
+    "react-native-tab-view": "^1.0.2",
     "react-native-transition": "^1.1.8",
     "react-navigation": "^2.5.2",
     "react-navigation-fluid-transitions": "^0.2.1"
