--- a/iot/package.json
+++ b/iot/package.json
@@ -29,8 +29,10 @@
     "react-native-calendar-picker": "^5.19.0",
     "react-native-indicators": "^0.13.0",
     "react-native-modal": "^6.4.0",
+    "react-native-super-grid": "^2.4.1",
     "react-native-svg-charts": "^5.2.0",
     "react-native-tab-view": "^1.0.2",
+    "react-native-timeline-listview": "^0.2.3",
     "react-native-transition": "^1.1.8",
     "react-navigation": "^2.5.2",
     "react-navigation-fluid-transitions": "^0.2.1"
