--- a/iot/package.json
+++ b/iot/package.json
@@ -28,12 +28,16 @@
     "react-native-bcrypt": "^2.4.0",
     "react-native-calendar-picker": "^5.19.0",
     "react-native-indicators": "^0.13.0",
+    "react-native-material-ripple": "^0.8.0",
+    "react-native-md-textinput": "^2.0.4",
     "react-native-modal": "^6.4.0",
     "react-native-super-grid": "^2.4.1",
     "react-native-svg-charts": "^5.2.0",
     "react-native-tab-view": "^1.0.2",
+    "react-native-textinput-effects": "^0.4.2",
     "react-native-timeline-listview": "^0.2.3",
     "react-native-transition": "^1.1.8",
+    "react-native-waveview": "^1.0.0",
     "react-navigation": "^2.5.2",
     "react-navigation-fluid-transitions": "^0.2.1"
   }
