--- a/iot/package.json
+++ b/iot/package.json
@@ -19,6 +19,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "aws-amplify": "^1.0.4",
+    "aws-amplify-react-native": "^1.0.4",
     "exp": "^55.0.4",
     "expo": "^28.0.0",
     "moment": "^2.22.2",
